hopefully leaflet correctly aligned

--- a/code/src/web/css/main.css
+++ b/code/src/web/css/main.css
@@ -1,5 +1,5 @@
 @CHARSET "UTF-8";
-#mapHolder { height:500px; width:500px; margin: inherit;}
+#mapHolder { height:500px; width:500px; margin-top: 160px; margin-left:auto}
 
 body { 
 height: 101%; 
